feat: add Button component and its story

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -4,6 +4,7 @@
     "description": "Money management made easy"
   },
   "common": {
+    "loading": "Loading",
     "hello_message": "Hello there, {name}!"
   }
 }
